fix color contrast for triple letter scores

--- a/src/index.scss
+++ b/src/index.scss
@@ -96,7 +96,7 @@ ol, ul {
 
 .TL {
   @include square;
-  background-color: blue;
+  background-color: #6264F4;
 }
 
 .DL {
